manifests/gitlab-ce/gitlab-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab-ce
spec:
  to:
    kind: Service
    name: gitlab-ce
  port:
    targetPort: https
  tls:
    termination: passthrough
